# cdec

./: .gitignore  CMakeLists.txt  README.md
decoder/: decoder.cc  decoder.h  oracle_bleu.h
extractor/: CMakeLists.txt  extract_daemon.cc  extract_request.cc  extract_request.h
semparse/: CMakeLists.txt  README.md  run_semparse.sh
semparse/data/ini_files/: cdec_mert.ini  cdec_mira.ini  cdec_test_mert.ini  cdec_test_mira.ini  cdec_validate.ini
semparse/data/nlmaps/: nlmaps.cfg
semparse/src/: decode_test.cc  eval.cc  extract_data.cc  extractor.cc  extractor.h  functionalizer.cc  functionalizer.h  linearizer.cc  linearizer.h  nl_mrl_pair.h  read_write.h
